@@ -55,6 +55,13 @@ LICENSE AND COPYRIGHT
 
     BSD 2-Clause License
 
+ACKNOWLEDGEMENTS
+    Development of this software has been made possible by institutional
+    support for the long-term strategic development of the National Library
+    of the Czech Republic as a research organization provided by the
+    Ministry of Culture of the Czech Republic (DKRVO 2024–2028), Area 11:
+    Linked Open Data.
+
 VERSION
     0.07
 
