@@ -1,4 +1,5 @@
 0.07
+ - Add ACKNOWLEDGEMENTS section to doc.
  - Fix ERRORS section in Abstract class doc.
  - Regen example in doc.
 
